examples/test/testpolicy16109.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16109
  namespace: namespace176
spec:
  podSelector:
    matchLabels:
      key17: value48
      key48: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value43
      podSelector:
        matchLabels:
          key23: value47
          key18: value10
